--- a/i18n/en.json
+++ b/i18n/en.json
@@ -622,6 +622,7 @@
   "backup_controller_page_turn_off": "Turn off foreground backup",
   "backup_controller_page_turn_on": "Turn on foreground backup",
   "backup_controller_page_uploading_file_info": "Uploading file info",
+  "backup_err_file_too_large": "File too large ({size} MB). Maximum supported size is 100 MB",
   "backup_err_only_album": "Cannot remove the only album",
   "backup_error_sync_failed": "Sync failed. Cannot process backup.",
   "backup_info_card_assets": "assets",
